dev/frontend/ph/ph-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ph-frontend-service
  namespace: dev  
spec:
  selector:
    app: ph-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
