dev/frontend/ph/ph-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ph-frontend-ingress
  namespace: dev 
spec:
  ingressClassName: nginx
  rules:
  - host: lb-cmcio-1492274533.us-west-1.elb.amazonaws.com # provicionalmente el registro A del load balancer
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ph-frontend-service
            port:
              number: 80
